# demo_pytorch_ml

./: .gitignore  LinearRegression.py  README.md  backend.ipynb  backend.py  build.sh  pyproject.toml  run_backend.sh  run_test.sh  server.py  train.ipynb
