[project]
name = "demo-pytorch-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
